<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp" />

    <Button
        android:id="@+id/button1"
        android:text="@string/app1"
        android:layout_below="@+id/textView"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:background="#F08C35" />

    <Button
        android:id="@+id/button2"
        android:text="@string/app2"
        android:layout_below="@+id/button1"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:background="#F08C35" />

    <Button
        android:id="@+id/button3"
        android:text="@string/app3"
        android:layout_below="@+id/button2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:background="#F08C35" />

    <Button
        android:id="@+id/button4"
        android:text="@string/app4"
        android:layout_below="@+id/button3"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:background="#F08C35" />

    <Button
        android:id="@+id/button5"
        android:text="@string/app5"
        android:layout_below="@+id/button4"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:background="#F08C35" />

    <Button
        android:id="@+id/button6"
        android:text="@string/app6"
        android:layout_below="@+id/button5"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:background="#fff01117" />

</RelativeLayout>
